# projot

./: .copilot-instructions.md  .gitignore  .instructions.md  .markdownlint.json  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  README.md  TECH_DEBT_AUDIT.md  cliff.toml  package-lock.json  package.json
.claude/: settings.json
.claude/skills/projot-new-command/: SKILL.md
.context/: query-context.md  session.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
choco/: projot.nuspec
choco/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
completions/: _projot  projot.bash  projot.fish  projot.ps1
docs/: BUILD.md  DESIGN.md  DEVELOPER.md  INSTALL-LINUX.md  INSTALL-WINDOWS.md  MCP.md  RELEASE.md  RELEASE_NOTES.md
mcp/: README.md  package.json  server.js  teams-sync.js  teams-sync.test.js  test.js
scripts/: generate-changelog.sh  install-completion.sh  package.sh
src/: CLAUDE.md  cli.cpp  cli.h  commands.cpp  commands.h  commands_config.cpp  commands_internal.h  commands_maint.cpp  commands_project.cpp  commands_shared.cpp  config.cpp  config.h  main.cpp  markdown.cpp  markdown.h  renderer.cpp  renderer.h  repo.cpp  repo.h  todo.cpp  todo.h  user_config.cpp  user_config.h  utils.h
tests/: CLAUDE.md  test_commands.cpp  test_config.cpp  test_errors.cpp  test_hook.cpp  test_markdown_parser.cpp  test_renderer.cpp  test_repo_discovery.cpp  test_todo_model.cpp  test_user_config.cpp  test_versioning.cpp
tests/data/configs/: malformed.cfg  repo_only.cfg  valid_full.cfg  version_future.cfg  version_zero.cfg
tests/data/notes/: basic.md  managed_sections.md  multi_todo.md  no_todos.md
